<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".reg_log.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/logo" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:theme="@style/ProgressBarStyle"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/forgotPassword"
        android:theme="@style/textStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="48dp"
        android:background="@android:color/transparent"
        android:hint="@string/password"
        android:textColorHint="@color/hintTopTextColor"
        android:theme="@style/textInputLayout"
        app:helperText="@string/textPasswordHelper"
        app:helperTextTextColor="@color/hintTopTextColor"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/hintTopTextColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintTopTextColor"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:textColor="#FFFFFF"
            android:theme="@style/textStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/email"
        android:textColorHint="@color/hintTopTextColor"
        android:theme="@style/textInputLayout"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintTopTextColor"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="12dp"
            android:textColor="#FFFFFF"
            android:theme="@style/textStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/log_out"
        android:clickable="true"
        android:focusable="auto"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:theme="@style/textStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

