<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".editor.PartyEditorActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:background="@drawable/log_out"
            android:gravity="center"
            android:padding="12dp"
            android:text="Delete all"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:theme="@style/textStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/log_out"
            android:gravity="center"
            android:text="@string/partyEditorApply"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:theme="@style/textStyle" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:weightSum="2.5">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:text="@string/partyEditorChooseTime"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1.5"
                android:text="@string/partyEditorChooseDay"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:weightSum="2.5">


            <TextView
                android:id="@+id/timeHolder"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/editor_text_back"
                android:drawableEnd="@drawable/ic_time"
                android:gravity="start|left|center_vertical"
                android:hint="@string/partyEditorHintTime"
                android:paddingStart="12dp"

                android:paddingEnd="8dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorChatGray" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1.5"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <Spinner
                    android:id="@+id/spinnerChooseDay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:background="@android:color/transparent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/editor_text_back"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:paddingEnd="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPartyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:text="@string/partyEditorChooseDate"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1.5"
                    android:text="@string/partyEditorPartyCommunity"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dateHolder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"

                    android:background="@drawable/editor_text_back"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:gravity="center_vertical"
                    android:hint="@string/partyEditorHintDate"
                    android:inputType="number"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorChatGray"
                    android:textSize="14sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1.5"
                    app:cardBackgroundColor="@android:color/transparent">

                    <Spinner
                        android:id="@+id/spinnerChoosePartyCommunity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:scrollbarThumbVertical="@color/white"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/editor_text_back"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/communityName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableEnd="@drawable/ic_world_24"
                            android:gravity="center_vertical"
                            android:paddingStart="12dp"
                            android:paddingEnd="8dp"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:text="@string/partyEditorNumberOfHours"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1.5"
                    android:text="@string/partyEditorDjsName"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/djHours"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/editor_text_back"
                    android:drawableEnd="@drawable/ic_time"
                    android:gravity="start|left|center_vertical"

                    android:hint="@string/partyEditorHintNumberOfHours"
                    android:paddingStart="12dp"
                    android:paddingEnd="8dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorChatGray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"


                    android:layout_marginStart="12dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/editor_text_back"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/nameDJ"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/partyEditorName"
                        android:inputType="textPersonName"
                        android:paddingStart="12dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorChatGray"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/searchDJ"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:paddingEnd="8dp"
                        app:srcCompat="@drawable/ic_search_24" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/addDJ"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/picture_stroke"
                android:drawableEnd="@drawable/float_button_add"
                android:drawablePadding="4dp"
                android:gravity="end|center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/partyEditorAddDJ"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/partyEditorDJsList"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerDJs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/picture_stroke" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>